results/SVCOMP/specgen/log-exceptions12-2024_02_25_16_58_24.txt
class A extends RuntimeException {}

class B extends A {}

class C extends B {}

class F {
  //@ ensures \result == \nothing;
  void foo() {
    try {
      B b = new B();
      throw b;
    } catch (B exc) {
      assert false;
    }
  }
}

public class exceptions12 {
  //@ ensures \result == \nothing;
  public static void main(String[] args) {
    try {
      F f = new F();
      f.foo();
    } catch (B exc) {
      assert false;
    }
  }
}
/home/max/Documents/JMLGPT/tmp/exceptions12.java:8: error: A \result expression may not be used in the specification of a method that returns void
  //@ ensures \result == \nothing;
               ^
/home/max/Documents/JMLGPT/tmp/exceptions12.java:8: error: No operator for <any> == none
  //@ ensures \result == \nothing;
                      ^
/home/max/Documents/JMLGPT/tmp/exceptions12.java:20: error: A \result expression may not be used in the specification of a method that returns void
  //@ ensures \result == \nothing;
               ^
/home/max/Documents/JMLGPT/tmp/exceptions12.java:20: error: No operator for <any> == none
  //@ ensures \result == \nothing;
                      ^
4 errors

class A extends RuntimeException {}

class B extends A {}

class C extends B {}

class F {
  //@ ensures true;
  void foo() {
    try {
      B b = new B();
      throw b;
    } catch (B exc) {
      assert false;
    }
  }
}

public class exceptions12 {
  //@ ensures true;
  public static void main(String[] args) {
    try {
      F f = new F();
      f.foo();
    } catch (B exc) {
      assert false;
    }
  }
}
/home/max/Documents/JMLGPT/tmp/exceptions12.java:14: verify: The prover cannot establish an assertion (Assert) in method foo
      assert false;
      ^
/home/max/Documents/JMLGPT/tmp/exceptions12.java:26: verify: The prover cannot establish an assertion (Assert) in method main
      assert false;
      ^
2 verification failures

class A extends RuntimeException {}

class B extends A {}

class C extends B {}

class F {
  //@ ensures true;
  void foo() {
    try {
      B b = new B();
      throw b;
    } catch (B exc) {
      assert true;
    }
  }
}

public class exceptions12 {
  //@ ensures true;
  public static void main(String[] args) {
    try {
      F f = new F();
      f.foo();
    } catch (B exc) {
      assert true;
    }
  }
}

